--- a/webapp/vm/choose/group/queryOption.vm
+++ b/webapp/vm/choose/group/queryOption.vm
@@ -1,6 +1,6 @@
 <div>
 	<p>query option</p>
 	#foreach ($option in $optionList)
-		<p>id=${option.optionname}&#160;&#160;&#160;매쪽=${option.probability}</p>
+		<p>id=${option.optionid}&#160;name=${option.optionname}&#160;&#160;&#160;매쪽=${option.probability}</p>
 	#end
 </div>
